--- a/TopNotify.Native/TopNotify.Native.vcxproj.filters
+++ b/TopNotify.Native/TopNotify.Native.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="WindowFinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="KeyboardHook.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
