--- a/TopNotify/TopNotify.csproj
+++ b/TopNotify/TopNotify.csproj
@@ -73,6 +73,7 @@
     <PackageReference Include="KdSoft.MailSlotListener" Version="1.0.4" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
     <PackageReference Include="System.Speech" Version="10.0.0-preview.1.25080.5" />
