--- a/TopNotify/TopNotify.csproj
+++ b/TopNotify/TopNotify.csproj
@@ -6,12 +6,12 @@
     <RootNamespace>SamsidParty_TopNotify</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ApplicationIcon>dist\Image\Icon.ico</ApplicationIcon>
-    <ApplicationManifest>dist\Meta\manifest.xml</ApplicationManifest>
+    <ApplicationIcon>src-vite\public\Image\Icon.ico</ApplicationIcon>
+    <ApplicationManifest>iv2runtime\manifest.xml</ApplicationManifest>
     <PackageId>TopNotify</PackageId>
     <AssemblyName>TopNotify</AssemblyName>
     <SignAssembly>False</SignAssembly>
-    <AssemblyOriginatorKeyFile>C:\Users\SamarthCat\Documents\Certificates\SamsidParty Private.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>C:\Users\Samarth\Documents\Certificates\SamsidParty Private.pfx</AssemblyOriginatorKeyFile>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <UseWindowsForms>False</UseWindowsForms>
     <Platforms>AnyCPU;x64;ARM64</Platforms>
@@ -64,11 +64,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="iv2runtime\win-x64\native\TopNotify.Native.dll" />
-    <None Remove="TopNotify.Native.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="KdSoft.MailSlot" Version="1.1.0" />
     <PackageReference Include="KdSoft.MailSlotListener" Version="1.0.4" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
@@ -91,6 +86,14 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<PackageCopyToOutput>true</PackageCopyToOutput>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.desktop\2.2.2\contentFiles\any\net9.0\iv2runtime\linux-arm64\native\libIgniteView.Desktop.Native.so" />
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.desktop\2.2.2\contentFiles\any\net9.0\iv2runtime\linux-x64\native\libIgniteView.Desktop.Native.so" />
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.desktop\2.2.2\contentFiles\any\net9.0\iv2runtime\osx-universal\native\libIgniteView.Desktop.Native.dylib" />
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.filedialogs\2.2.2\contentFiles\any\net9.0\iv2runtime\linux-arm64\native\libnfd.so" />
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.filedialogs\2.2.2\contentFiles\any\net9.0\iv2runtime\linux-x64\native\libnfd.so" />
+	  <Content Remove="C:\Users\Samarth\.nuget\packages\igniteview.filedialogs\2.2.2\contentFiles\any\net9.0\iv2runtime\osx-universal\native\libnfd.dylib" />
 	</ItemGroup>
 	<PropertyGroup>
 		<DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
